--- a/quasar/src/components/input/input.styl
+++ b/quasar/src/components/input/input.styl
@@ -43,6 +43,8 @@
         padding-top 14px
       .q-field__native
         min-height 24px
+        padding-top 3px
+      .q-field__prefix, .q-field__suffix
         padding-top 2px
 
 body.mobile .q-textarea,
